public/style/master.css
@font-face {
  font-family: "Montserrat ExtraLight";
  src: url("./fonts/Montserrat/Montserrat-ExtraLight.ttf");
  font-weight: "200";
}

@font-face {
  font-family: "Montserrat Light";
  src: url("./fonts/Montserrat/Montserrat-Light.ttf");
  font-weight: "300";
}

@font-face {
  font-family: "Lato Bold";
  src: url("./fonts/Lato/Lato-Bold.ttf");
  font-weight: "700";
}

@font-face {
  font-family: "Roboto Medium";
  src: url("./fonts/Roboto/Roboto-Medium.ttf");
  font-weight: "500";
}

.xlight-montserrat {
  font-family: 'Montserrat ExtraLight', sans-serif;
}
.light-montserrat {
  font-family: 'Montserrat Light';
  letter-spacing: 1.7pt;
  font-size: 10pt;
}
.lato {
  font-family: 'Lato Bold', sans-serif;
}
.roboto {
  font-family: 'Roboto Medium', sans-serif;
}

body {
  font-family: "helvetica"
}

.homepage-background {
  background-image: url("../images/background.png");
  height: 1007px;
  width: 100%;
  background-repeat: no-repeat;
  background-size: cover;
}

.homepage-search-form {
  width: 943px;
  height: 50px;
}

.homepage-form-input {
  height: 50px;
  border-radius: 2px;
  background-color: rgba(255, 255, 255, .85);
}

.homepage-form-input::placeholder {
  padding: 0px 10px;
  color: black;
  letter-spacing: 0pt !important; 
  font-family: 'Montserrat Light'; 
  font-size: 10pt;
  font-weight: 100;
}

.homepage-nav-buttons {
  z-index: 20;
  margin: 0 30px;
}

.homepage-search-btn {
  width: 337px;
  height: 50px;
  font-size: 12pt;
}

.footer-images {
  display: flex;
  justify-content: flex-start;
}

.homepage-navbar,
.homepage-tagline,
.homepage-search-form {
  z-index: 20;
}
.homepage-tagline {
  font-size: 48pt !important;
}

.homepage-background::after {
  content: " ";
  z-index: 5;
  display: block;
  position: absolute;
  height: 1007px;
  top: 0;
  left: 0;
  right: 0;
  background: rgba(0, 0, 0, .5);
}

.login-container {
  height: 667px;
  width: 470px;
}

.login-header {
  font-size: 3em;
}

.login-form-box {
  width: 470px;
  height: 667px;
}

#login-email::placeholder,
#login-password::placeholder{
  padding: 0px 20px;
  font-family: 'Montserrat', sans-serif;
  font-weight: 300;
  font-size: 14pt;
  letter-spacing: 0pt !important; 
}

.btn-facebook {
  background-color: rgb(59, 89, 152);
  color: white;
}

.btn-google {
  -webkit-box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.5);
  -moz-box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.5);
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.5);
}

.btn-cinch {
  background-color: black;
  color: #afafaf;
  border-radius: 6;
  font-size: 10pt;
  letter-spacing: 1.6pt;
}

.detail-program-detail {
  width: 764px;
  height: 902px;
}

.detail-search-input {
  height: 50px !important;
  border-radius: 3px;
}

.detail-nav {
  width: 100vw;
  height: 80px;
}

.search-membership-buttons {
  width: 144px;
  height: 40px;
}

.detail-container {
  margin: 50px 275px;
}

.detail-location-group {
  width: 370px;
  height: 373px;
}

.register-cinch-submit {
  width: 570px;
  height: 50px;
  margin: 0px;
}

#inputState > option selected {
  color: rgba(0, 0, 0, .3);
  font-family: 'Montserrat Light';
  letter-spacing: 0pt !important; 
  padding-left: 15px;
}

.register-input-label {
  font-size: 9pt;
}

.register-input-text {
  padding: 15px;
}

.detail-search-input:placeholder {
  color: rgba(0, 0, 0, .3);
  font-family: 'Montserrat Light';
  letter-spacing: 0pt !important; 
  padding-left: 15px;
}

.login-input-text::placeholder {
  color: rgba(0, 0, 0, .3);
  font-size: 10pt !important;
  font-family: 'Montserrat Light';
  letter-spacing: 0pt !important; 
}

.footer-input::placeholder,
.register-input-text::placeholder {
  color: rgba(0, 0, 0, .2);
  font-family: 'Montserrat Light';
  letter-spacing: .4pt !important; 
  padding-left: 6px;
  font-size: 10pt;
}

.search-input {
  height: 50px;
  width: 170px;
}

.search-logo {
  padding-left: 165px;
  padding-top: 30px;
  padding-bottom: 30px;
}

.search-membership-buttons {
  color: #757575;
}

.icon-bar {
  width: 22px;
  height: 3px !important;
  margin: 4px 0px;
  padding: 1px;
  color: black;
  border-color: black;
  background-color: black;
}

